# videoplayer

./: .gitignore  README.md
source/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  ControlWidget.cpp  ControlWidget.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  PlaybackToolbar.cpp  PlaybackToolbar.h  Player.cpp  Player.h  ProgressControl.cpp  ProgressControl.h  VideoWidget.cpp  VideoWidget.h  images.qrc  main.cpp  videoplayer.pro
